Removed Randomize button for now

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
             <div id="game_container">
             </div>        
         </div>
-        <button id="randomize_btn">Randomize (Sothapirchuna)</button>
+        <!-- <button id="randomize_btn">Randomize (Sothapirchuna)</button> -->
     </body>
 </html>
 
